2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.

2011-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: Do not crash if an unknown device-property
	  is set.

2011-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	Fix many errors/warnings found by klocwork
	* Many files.

2011-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Split the threads property in
	  nb_threads_backup and nb_treads_recovery.
	* man/xml-source/amanda-devices.7.xml: Document it.

2011-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve balancing if some dle have strategy
	  noinc or a smaller dumpcycle.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Do the uncompress if client can't do it.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: new changer error: empty.
	* perl/Amanda/Changer/robot.pm: return empty slot.
	* perl/Amanda/Taper/Scan/traditional.pm: Handle empty slot.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	Make s3 works with Eucalyptus.
	* device-src/s3-device.c: Add S3_HOST, S3_SERVICE_PATH and
	  S3_SUBDOMAIN properties. Handle NoSuchEntity and
	  BucketAlreadyOwnedByYou error.
	* device-src/s3.c: Build url from new properties.
	* device-src/s3.h: New s3_open prototype.
	* man/xml-source/amanda-devices.7.xml: Document S3_HOST,
	  S3_SERVICE_PATH and S3_SUBDOMAIN properties.

2011-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Check generated label and meta-label.

2011-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amlabel.8.xml: Improve doc.
	* server-src/amlabel.pl: Remove spurious print.

2011-04-16  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Remove volative for s3.
